--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next-http-backend": "^2.4.2",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
+    "nodemon": "^3.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-datepicker": "^4.25.0",
