--- a/firebase.json
+++ b/firebase.json
@@ -5,12 +5,6 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
     ]
   },
   "functions": [
@@ -20,6 +14,7 @@
     },
     {
       "source": "functions",
+      "runtime": "nodejs18",
       "codebase": "functions",
       "ignore": [
         "node_modules",
