added runtime in firebase.json and firebaserc 2

--- a/.firebaserc
+++ b/.firebaserc
@@ -24,7 +24,8 @@
     },
     "functions": {
       "trial": {
-        "source": "server"
+        "source": "server",
+        "runtime": "nodejs18"
       }
     }
   },
