--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "csv-writer": "^1.6.0",
     "express": "^4.18.2",
+    "firebase-functions": "^4.6.0",
     "fs": "^0.0.1-security",
     "i18next": "^23.7.16",
     "i18next-browser-languagedetector": "^7.2.0",
