--- a/.firebaserc
+++ b/.firebaserc
@@ -1,7 +1,8 @@
 {
   "projects": {
     "default": "mog-aasu",
-    "staging": "mog-aasu"
+    "staging": "mog-aasu",
+    "prod": "mog-aasu"
   },
   "targets": {
     "hosting": {
