--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,24 @@
 {
-  "functions": [
-    {
-      "source": "server",
-      "runtime": "nodejs16"
-    }
-  ],
+  "functions": {
+    "source": "server",
+    "runtime": "nodejs16"
+  },
   "hosting": {
     "public": "build",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "/api/**",
+        "function": "app"
+      },
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
   }
 }
