--- a/firebase.json
+++ b/firebase.json
@@ -2,7 +2,14 @@
   "functions": [
     {
       "source": "server",
-      "runtime": "nodejs16"
+      "runtime": "nodejs16",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log"
+      ]
     }
   ],
   "hosting": {
@@ -11,16 +18,6 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "/api/**",
-        "function": "app"
-      },
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
     ]
   }
 }
