--- a/firebase.json
+++ b/firebase.json
@@ -10,6 +10,16 @@
         "firebase-debug.log",
         "firebase-debug.*.log"
       ]
+    },
+    {
+      "source": "build",
+      "codebase": "mog-asu",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log"
+      ]
     }
   ],
   "hosting": {
@@ -21,9 +31,8 @@
     ],
     "rewrites": [
       {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
+      "source": "**",
+      "destination": "/index.html"
+    }]
   }
 }
