--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.1",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.0.3",
     "react": "^18.2.0",
