--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,18 @@
   },
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "csv-writer": "^1.6.0",
+    "dotenv": "^16.4.1",
+    "fast-csv": "^5.0.0",
     "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.6.0"
+    "firebase-functions": "^4.6.0",
+    "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.1",
+    "path": "^0.12.7",
+    "request-ip": "^3.3.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
